--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,24 @@
 [bdist_wheel]
-# This flag says that the code is written to work on both Python 2 and Python
-# 3. If at all possible, it is good practice to do this. If you cannot, you
-# will need to generate wheels for each Python version that you support.
 universal=1
+
+[metadata]
+description-file = README.md
+license_file = LICENSE.txt
+
+[versioneer]
+VCS=git
+style=pep440
+versionfile_source=pytrade/_version.py
+versionfile_build=pytrade/_version.py
+tag_prefix=
+parentdir_prefix= pytrade-
+
+# [nosetests]
+# verbosity=2
+# with-ignore-docstrings=1
+# with-timer=1
+# timer-top-n=15
+# cover-package=pytrade
+# with-doctest=1
+# testmatch=(?:^|[\\b_\\.-])[Tt]est(?!ing)
+# logging-level=INFO
